syntax = "proto3";

option java_package = "com.user.grpc";

service userService{
	
	rpc requestLocationProof(LocProofReq) returns (LocProofRep);
	
}

message LocProofReq{
	int32 proverID = 1;
	int32 epoch = 2;
	Position loc = 3;
	string dig_sign = 4;
}

message LocProofRep{
	bool error = 1;
	string proof = 2;
	string proof_dig_sig = 3;
	string messageError = 4;
	int32 witnessID = 5;
}

message Position{
	int32 X = 1;
	int32 Y = 2;
}


